--- a/WebContent/weui/gemo/css/page.css
+++ b/WebContent/weui/gemo/css/page.css
@@ -287,6 +287,36 @@ input[type="checkbox"]:checked+div {background: url(../img/queren.png) no-repeat
 .center-btn{width: 96%; margin: 0 auto 5%; text-align: center; height: 1.5rem; line-height: 1.5rem; background-color: #25cb83; color: #fff; font-size: .5rem;}
 
 /*
+ View subordinates（查看下级）--------------------------------------------------------------------------------------
+ * */
+.h-tit{width: 100%; background-color: #25cb83;  padding: 3% 5%; }
+.h-tit p{ color:#fff;}
+.h-tit p span{ font-size:.32rem;}
+
+.account .t-bt{height: 1.5rem; width: 100%; background-color: #25cb83;}
+.account .t-bt ul li{text-align: center; float: left; height: 1.5rem; line-height: 1.5rem; font-size: .4rem; color: #333;  background:#f5f5f5; }
+.account .t-bt ul .l1{ width:15%;}
+.account .t-bt ul .l2{ width:25%;}
+.account .t-bt ul .l3{ width:60%;}
+
+
+.account .t-list{background-color: #fff; margin-bottom: 3%;}
+.account .t-list .shang{width: 100%; border-bottom: 1px solid #f5f5f5;}
+.account .t-list .shang ul li{height: 1.5rem; line-height: 1.5rem; text-align: center;  float: left; font-size: .36rem; color: #333333; text-align:center; border:1px solid #f5f5f5; border-bottom:none; border-left:none; border-right:none;}
+.account .t-list .shang ul li.l4{width: 15%;}
+.account .t-list .shang ul li.l4 img{ border-radius:50%; height:1rem; width:1rem; margin-top:.25rem; float:right;}
+.account .t-list .shang ul li.l5{ width:25%; }
+.account .t-list .shang ul li.l6{ width:60%;}
+.account .t-list .shang ul li span{color:#f8614e;}
+
+
+
+.h-topone{width: 100%; text-align: center; padding: 3% 5% 5%;}
+.h-topone p{font-size: .6rem; color: #fff;}
+.h-topone p samp{font-size: .45rem; font-family: "微软雅黑";}
+.h-topone span{font-size: .45rem; color: #fff;} 
+
+/*
  account--------------------------------------------------------------------------------------
  * */
 .account{width: 100%;}
@@ -444,9 +474,12 @@ Agent 代理管理--------------------------------------------------------------
 .assess ul .assess-right{ float: left; margin-left: 5%; width: 30%; overflow: hidden;}
 .assess ul .assess-right img{width: 20%; display: block; float: left; }
 
-.address-add,.duih-btn{display: block; height: 1.5rem; line-height: 1.5rem;  font-size: .5rem; color: #fff; text-align: center; border-radius:.1rem;}
-.address-add{ background-color: #25cb83; width: 96%; margin: 5% 2%; }
+
+.address-add,.duih-btn{display: block; height: 1.5rem; line-height: 1.5rem; font-size: .5rem; color: #fff; text-align: center; border-radius:.1rem;}
+.address-add{ background-color: #25cb83; width: 96%; margin: 5%  2%; overflow:hidden; }
 .duih-btn{ background-color: #f8614e; width:50%; margin:5% 25%; }
+
+
 
 .success{width:80%; margin:1rem auto; overflow:hidden;}
 .success .suc{ width:20%; background:#000; margin:0 auto;}
@@ -591,6 +624,7 @@ Agent 代理管理--------------------------------------------------------------
 .add-address .plist ul li:last-child{margin-bottom: 0;}
 .address-btn{width: 100%; padding: 3% 5%; border-top: 1px solid #f5f5f5; border-bottom: 1px solid #f5f5f5; background-color: #fff;}
 .address-btn .szwmr{font-size: .45rem; color: #333333; line-height: 1rem;}
+.add-address .f5{ font-size:.5rem;}
 .toggle {position: relative;display: block;margin: 0 auto;	width: 2rem;height: 1rem; color: white;outline: 0;	text-decoration: none;border-radius: 100px;border: 2px solid #f5f5f5;background-color: #faf8f3;-webkit-transition: all 500ms;-moz-transition: all 500ms;-o-transition: all 500ms;transition: all 500ms;}
 .toggle:active {background-color: #fff;}
 .toggle:hover:not(.toggle--moving):after {background-color: #ffffff;}
@@ -614,8 +648,10 @@ Agent 代理管理--------------------------------------------------------------
 .plist ul li a{display: inline-block; width: 100%;}
 .plist ul li p{line-height: 1.5rem; margin-left: 3%; color: #333333; font-size: .45rem;}
 .plist ul li p.tel{color: #666; width: 80%; overflow: hidden; text-overflow: ellipsis; -webkit-text-overflow: ellipsis; white-space: nowrap;}
-.plist ul li input{margin: 0; text-indent: .5em; padding: 0; border: none; width: 60%; height: 1.4rem; font-size: .45rem; color: #333;}
+.plist ul li input{margin: 0; text-indent: .5em; padding: 0; border: none; width: auto; height: 1.4rem; font-size: .45rem; color: #333; text-align:right;}
 .plist ul li i{color: #999; font-size: .5rem;}
+.plist ul li .adr{overflow:hidden; width:50%;  height:1.5rem; line-height:1.5rem;}
+
 
 /*
  提交订单----------------------------------------------------------------------------------
