--- a/WebContent/weui/gemo/css/page.css
+++ b/WebContent/weui/gemo/css/page.css
@@ -91,10 +91,20 @@
 .cations .list .tu{width: 100%;}
 .cations .list .tu img{max-width: 100%;}
 
+/*---------------------------------------------------------------------------------------
+ empty-list
+ * */
+.empty-list{width: 100%; padding-top: 20%; text-align: center; }
+.empty-list i{font-size: 1.3rem; color: #fff; background:#d1d2d4; padding:5%; border-radius:50%;}
+.empty-list p{font-size: .5rem; color: #333; margin-top: 1rem; }
+.empty-list .p-ft{ color:#bebebe; font-size:.36rem; margin-top:.2rem; }
+.empty-list .b-col{ background:#60c118;}
+
 /*
  shopcar--------------------------------------------------------------------------------------
  * */
 .shopcar{width: 100%;}
+.shopcar .gys-tit{background:#fff; padding:.2rem .3rem;  color:000; font-size:.36rem; margin-top:.4rem; border-bottom:1px solid #f5f5f5;}
 .shopcar .list{width: 100%; height: 4rem; background-color: #fff; margin-bottom: 3%; padding: .5rem .2rem;}
 .shopcar .list .xuan{width: .8rem; height: .8rem; margin-top: 1.1rem;}
 label {width: 100%; display: block;  position: relative; font-weight: normal;}
@@ -115,6 +125,8 @@ label {width: 100%; display: block;  position: relative; font-weight: normal;}
 .shopcar .list .right .bottom{width: 100%; margin-top: .2rem;}
 .shopcar .list .right .bottom .zuo ul li{float: left; color: #00cc7d; font-size: .4rem; width: .6rem; height: .6rem; text-align: center; line-height: .6rem;}
 .shopcar .list .right .bottom .zuo ul li img{width: 100%;}
+.shopcar .list .right .bottom .zuo ul li .num-txt{ border:none; height:.6rem; vertical-align:middle; margin:0; padding:0; text-align:center; font-size:.36rem; }
+.shopcar .list .right .bottom .zuo ul li.num-w{ width:1.6rem; padding:0 .2rem; height:.8rem; line-height:.6rem;  }
 .shopcar .list .right .bottom i{line-height: .8rem; color: #979797; font-size: .6rem;}
 
 .settlement{width: 100%; height: 1.8rem; position: fixed; bottom: 1.5rem; border-top: 1px solid #f4f4f4; background-color: #fff;}
@@ -164,6 +176,10 @@ label {width: 100%; display: block;  position: relative; font-weight: normal;}
 .detail .middle a{color: #333333; font-size: .5rem; display: block; width: 100%; height: 100%;}
 .detail .middle i{color: #c1c2c4;}
 
+.detail .chanpxq{width:100%; background:#fff;  border-top: 1px solid #f5f5f5;}
+.detail .chanpxq .tu{padding:3%;}
+.detail .chanpxq .tu img{width:100%; vertical-align:bottom;}
+
 .footerone{width: 100%; border-top: 1px solid #e6e6e6; height: 1.8rem; background-color: #fff; position: fixed; bottom: 1.5rem; left: 0;}
 .footerone .left{width: 30%;}
 .footerone .left ul li{width: 50%; height: 1.8rem; border-right: 1px solid #e6e6e6; padding-top: .4rem; float: left; text-align: center; position:relative;}
@@ -202,7 +218,7 @@ label {width: 100%; display: block;  position: relative; font-weight: normal;}
 .sdetail .top .tu img{vertical-align: middle; max-width: 100%; max-height: 100%;}
 .sdetail .top .you{width: 50%; text-align: left; margin-left: 3%;}
 .sdetail .top .you .tit{width: 100%; font-size: .5rem; color: #333333;}
-.sdetail .top .you span{font-size: .5rem; color: #fc8f00; display: block; margin-top: .2rem;}
+.sdetail .top .you span{font-size: .4rem; color: #fc8f00; display: block; margin-top: .1rem;}
 .sdetail .middle{width: 100%; padding: .5rem 0 .3rem; border-bottom: 1px solid #dfdfdf;}
 .sdetail .middle p,
 .sdetail p{font-size: .5rem; color: #001924;}
@@ -210,9 +226,11 @@ label {width: 100%; display: block;  position: relative; font-weight: normal;}
 .sdetail .middle .xia ul li{ height: 1.3rem; line-height: 1.3rem; margin-right: 2%; margin-bottom: 2%; width: 25%; text-align: center; float: left; background-color: #f5f5f5; color: #333333; font-size: .45rem;}
 .sdetail .middle .xia ul li.cur{background-color: #00cc7d; color: #fff;}
 .sdetail .bottom{width: 100%; margin-top: 5%;}
-.sdetail .bottom .you{width: 3rem; height: 1rem;}
-.sdetail .bottom .you ul li{float: left; height: 1rem; line-height: .8rem; width: 1rem; text-align: center;}
+.sdetail .bottom .you{width: 4rem; height: 1rem; }
+.sdetail .bottom .you ul li{float: left; height: 1rem; line-height: .8rem; text-align: center;width:1rem;}
 .sdetail .bottom .you ul li img{width: 100%;}
+.sdetail .bottom .you ul li .num-txt{ border:none; height:.6rem; vertical-align:middle; margin:0; padding:0; text-align:center; font-size:.36rem; }
+.sdetail .bottom .you ul li.num-w{ width:1.6rem; padding:0 .2rem; height:.8rem; line-height:.6rem;  }
 .shop-btn{width: 100%; height: 1.5rem; line-height: 1.5rem; margin-bottom: 1rem; text-align: center; background-color: #00cc7d; color: #fff; font-size: .5rem;}
 
 /*
@@ -285,6 +303,20 @@ input[type="checkbox"]:checked+div {background: url(../img/queren.png) no-repeat
 .cashlist ul li i{color: #aaaaaa;}
 
 .center-btn{width: 96%; margin: 0 auto 5%; text-align: center; height: 1.5rem; line-height: 1.5rem; background-color: #25cb83; color: #fff; font-size: .5rem;}
+
+.myorder{width:100%; background:#fff; margin-bottom:4%;}
+.myorder ul li{float:left; width:20%; text-align:center; padding:3% 0; position:relative;}
+.myorder ul li a{display:block; height:100%; width:100%;}
+.myorder ul li p{font-size:.32rem; color:#333;}
+.myorder ul li .tu img{width:30%;}
+.myorder ul li .num{position:absolute; border:1px solid #fb5a5b; color:#fb5a5b; text-align:center; width:.6rem; height:.6rem; line-height:.6rem;
+border-radius: 50%;    /*目标元素四角都为4px的圆角*/
+border-top-right-radius: 50%;    /*目标元素右上角为4px的圆角*/
+border-top-left-radius: 50%;    /*目标元素左上角为4px的圆角*/
+left:58%;
+top:10%;
+background:#fff;
+}
 
 /*
  View subordinates（查看下级）--------------------------------------------------------------------------------------
@@ -414,13 +446,14 @@ Agent 代理管理--------------------------------------------------------------
 /*
  全部订单----------------------------------------------------------------------------------
  * */
-.order-top{width: 100%; background-color: #25cb83;}
+.order-top{width: 100%; background-color:#fff;  }
 .order-top ul li{float: left; width: 20%; text-align: center;}
-.order-top ul li a{padding: 20% 0; font-size: .5rem; display: inline-block; color: #fff;}
-.order-top ul li.cur a{border-bottom: 2px solid #f58611; color: #fff;}
+.order-top ul li a{padding: 20% 0; font-size: .45rem; display: inline-block; color: #333;}
+.order-top ul li.cur{border-bottom: 2px solid #f8614e; }
+.order-top ul li.cur a{color:#f8614e; }
 .order-list{width: 100%; background-color: #fff; border-top: 1px solid #f5f5f5; border-bottom: 1px solid #f5f5f5; margin-bottom:3%;}
 .order-list .ordernum{width: 100%; padding:3% 5%; font-size: .4rem; color: #333; border-bottom: 1px solid #f5f5f5;}
-.order-list .ordernum span{font-size: .35rem; margin-left: 3%; padding: .1rem; background-color: #25cb83; color: #fff;}
+.order-list .ordernum span{font-size: .35rem; margin-left: 3%; padding: .1rem;  color: #aaa;}
 .order-list .list{width: 100%; padding: 5%; position: relative; border-bottom: 1px solid #f5f5f5;}
 .order-list .list .tu{width: 17.857%; text-align: center;}
 .order-list .list .tu img{max-width: 100%; vertical-align: middle;}
@@ -431,9 +464,15 @@ Agent 代理管理--------------------------------------------------------------
 .order-list .list .middle .price .xprice{color: #f8614e; display: inline-block; font-size: .4rem;}
 .order-list .list .middle .price .yprice{font-size: .35rem; display: inline-block; color: #a4a4a4; margin-left: 2%; text-decoration: line-through;}
 .order-list .list .middle .price .sjzhuanx{margin-left: 4%; display: inline-block; background-color: #37a0ed; color: #fff;}
-.order-list .list .middle .price .shu{float: right; display: inline-block; font-size: .35rem; color: #f8614e; border:1px solid #f8614e; padding:2%;}
+.order-list .list .middle .price .shu{float: right; display: inline-block; font-size: .4rem; color: #4d4e50;}
+.odr-jg{width: 100%; padding:3% 5%; font-size: .5rem;  font-size:.36rem; text-align:right; border-bottom: 1px solid #f5f5f5; color:#333; overflow:hidden; }
+.odr-jg span{ color: #f8614e; font-size:.4rem;}
+.odr-jg b{ font-weight:normal; font-size:.32rem;}
 .gopay-btn{display: block; margin: 3% 0; width: 21.429%; margin-right: 5%; text-align: center; padding: 2% 0; background-color: #25cb83; color: #fff; font-size: .5rem;}
-
+.lijzf-btn,.gray-btn,.blue-btn{display: block; margin: 3% 0; width: 18.429%; margin-right: 2.5%; text-align: center; padding: .2rem 0; font-size: .36rem;}
+.lijzf-btn{border:1px solid #f8614e; color: #f8614e; }
+.gray-btn{border:1px solid #dbdbdb; color: #666; }
+.blue-btn{border:1px solid #1dd7a0; color: #1dd7a0;}
 /*
  订单跟踪----------------------------------------------------------------------------------
  * */
