--- a/WebContent/weui/gemo/css/page.css
+++ b/WebContent/weui/gemo/css/page.css
@@ -14,8 +14,14 @@
 .boutique,
 .seller,
 .onnew{width: 100%; padding:0 2%;}
-.boutit{width:100%;position: relative; height: 1.2rem; text-align: left; background:#; }
-.boutit span{display: block; position: absolute; top: .55rem; width: 100%;}
+.boutit{width:100%;position: relative; height: 1.2rem; text-align: left; background:#fff; margin-bottom:3%; }
+.boutit span{
+	display: block;
+	position: absolute;
+top: .55rem; 		width: 100%;
+	left: -28px;
+	top: -1px;
+}
 .boutit samp{line-height: 1.2rem; color: #333; position: relative; height: 1.2rem; padding: 0 3%; font-size: .45rem; font-family:Arial, Helvetica, sans-serif;}
 .boutique .content,
 .seller .content,
@@ -105,7 +111,7 @@
  shopcar--------------------------------------------------------------------------------------
  * */
 .shopcar{width: 100%;}
-.shopcar .gys-tit{background:#fff; padding:.2rem .3rem;  color:000; font-size:.35rem; margin-top:.4rem; border-bottom:1px solid #f5f5f5;}
+.shopcar .gys-tit{background:#fff; padding:.2rem .3rem;  color:000; font-size:.4rem; margin-top:.4rem; border-bottom:1px solid #f5f5f5;}
 .shopcar .list{width: 100%; height: 4rem; background-color: #fff; margin-bottom: 3%; padding: .5rem .2rem;}
 .shopcar .list .xuan{width: .8rem; height: .8rem; margin-top: 1.1rem;}
 label {width: 100%; display: block;  position: relative; font-weight: normal;}
@@ -272,7 +278,7 @@ input[type="radio"]:checked+div {background: url(../img/check2.png) no-repeat; b
 .radiotwo .opt-text{font-size: .4rem;}
 
 .confirm .gmshuthree .you{width: 80%; margin-top: 0;}
-.confirm .gmshuthree .you .text{height: 1.4rem; line-height: 1.4rem; color: #333; margin: 0; padding: 0; text-indent: .5rem; border: none; font-size: .4rem;}
+.confirm .gmshuthree .you .text{height: 1.4rem; color: #333; margin: 0; padding: 0; text-indent: .5rem; border: none; font-size: .4rem;}
 .confirm .gmshu samp{color: #fc8f00; font-size: .57rem; font-family: "微软雅黑";}
 
 .confirm .integral{width: 100%; background-color: #fff; margin-top: 3%; padding: 0 .2rem; height: 1.5rem; line-height: 1.5rem;}
